--- a/index.html
+++ b/index.html
@@ -2,22 +2,26 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Noah Stapp</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="font-awesome-4.4.0/css/font-awesome.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Raleway|Poiret+One|Lato|Open+Sans|Work+Sans|Rubik|Roboto" rel="stylesheet" type="text/css">
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-  </head>
-  <body class="homepage" data-spy="scroll" data-target=".navbar">
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
-    <!-- HEADER SECTION -->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Noah Stapp</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="font-awesome-4.4.0/css/font-awesome.min.css">
+  <link href="http://fonts.googleapis.com/css?family=Raleway|Poiret+One|Lato|Open+Sans|Work+Sans|Rubik|Roboto"
+    rel="stylesheet" type="text/css">
+  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+</head>
+
+<body class="homepage" data-spy="scroll" data-target=".navbar">
+  <main role="main>" <!-- HEADER SECTION -->
     <div id="home">
       <div class="container-fluid">
         <div class="row">
@@ -25,18 +29,22 @@
             <div id="header-title">
               <h1>Noah Stapp</h1>
               <h3 id="info">Test info></h3>
-              <h3 id="experience">Test experience</h3> 
+              <h3 id="experience">Test experience</h3>
               <!-- <a href="#portfolio"><span class="down-arrow fa fa-angle-double-down"></span></a> -->
             </div>
           </div>
         </div>
       </div>
     </div>
+  </main>
+</body>
 
+</html>
+<!-- 
     <main role="main">
     
-      <!-- PORTFOLIO SECTION -->
-        <section id="portfolio">
+       PORTFOLIO SECTION -->
+<!-- <section id="portfolio">
           <div class="container">
             <h1 id="portfolio-title">Portfolio</h1>
               <div class="row">
@@ -45,18 +53,18 @@
               </div>
             </div>
             </div>
-          </section>
+          </section> -->
 
-          <!-- EXPERIENCE SECTION -->
-          <section id="resume">
+<!-- EXPERIENCE SECTION -->
+<!-- <section id="resume">
             <div class="container">
               <h1 id="resume-title">Experience</h1>
                 <?php perch_content('Resume content'); ?>
               </div>
-            </section>
+            </section> -->
 
-      <!-- CONTACT SECTION -->
-        <section id="contact">
+<!-- CONTACT SECTION -->
+<!-- <section id="contact">
           <div class="container">
             <h1 id="contact-title">Contact Me</h1>
               <div class="row">
@@ -66,48 +74,47 @@
               </div>
               <div class="row">
                   <div class="contact-email col-sm-4">
-                    <span class="icon fa fa-envelope-o"></span>
-                    <!-- <h2>Email:</h2> -->
-                      <p><a href="mailto:noah@noahstapp.com">noah@noahstapp.com</a></p>
+                    <span class="icon fa fa-envelope-o"></span> -->
+<!-- <h2>Email:</h2> -->
+<!-- <p><a href="mailto:noah@noahstapp.com">noah@noahstapp.com</a></p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="contact-phone col-sm-4">
-                    <span class="icon fa fa-phone"></span>
-                    <!-- <h2>Phone:</h2> -->
-                      <p>(978) 799-7181</p>
+                    <span class="icon fa fa-phone"></span> -->
+<!-- <h2>Phone:</h2> -->
+<!-- <p>(978) 799-7181</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="contact-linkedin col-sm-4">
-                    <span class="icon fa fa-linkedin-square"></span>
-                        <!-- <h2>Email:</h2> -->
-                          <p><a href="https://www.linkedin.com/in/noahstapp/">linkedin.com/in/NoahStapp</a></p>
+                    <span class="icon fa fa-linkedin-square"></span> -->
+<!-- <h2>Email:</h2> -->
+<!-- <p><a href="https://www.linkedin.com/in/noahstapp/">linkedin.com/in/NoahStapp</a></p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="contact-bitbucket col-sm-4">
-                    <span class="icon fa fa-github-square"></span>
-                        <!-- <h2>Email:</h2> -->
-                          <p><a href="https://github.com/NoahStapp/">github.com/NoahStapp</a></p>
+                    <span class="icon fa fa-github-square"></span> -->
+<!-- <h2>Email:</h2> -->
+<!-- <p><a href="https://github.com/NoahStapp/">github.com/NoahStapp</a></p>
                   </div>
                 </div>
               </div>
             </div>
-          </section>
-        </main>
+          </section> -->
 
-      <!-- FOOTER -->
-    <footer class="footer">
+<!-- FOOTER -->
+<!-- <footer class="footer">
       <div class="container">
         <ul>
           <li><p>Copyright &copy; Noah Stapp 2019. All rights reserved.</p></li>
         </ul>
       </div>
-    </footer>
+    </footer> -->
 
-    <!-- JavaScript -->
-    <script src="js/jquery-1.11.3.min.js"></script>
+<!-- JavaScript -->
+<!-- <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script src="js/scroll.js"></script>
@@ -119,6 +126,4 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-64272021-1', 'auto');
       ga('send', 'pageview');
-    </script>
-  </body>
-</html>
+    </script> -->
