--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="font-awesome-4.4.0/css/font-awesome.min.css">
-  <link href="http://fonts.googleapis.com/css?family=Raleway|Poiret+One|Lato|Open+Sans|Work+Sans|Rubik|Roboto"
+  <link href="https://fonts.googleapis.com/css?family=Raleway|Poiret+One|Lato|Open+Sans|Work+Sans|Rubik|Roboto"
     rel="stylesheet" type="text/css">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -26,12 +26,10 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12 text-center">
-            <div id="header-title">
-              <h1>Noah Stapp</h1>
-              <h3 id="info">Test info></h3>
-              <h3 id="experience">Test experience</h3>
-              <!-- <a href="#portfolio"><span class="down-arrow fa fa-angle-double-down"></span></a> -->
-            </div>
+            <h2>Hey there.</h2>
+            <h2>I'm </h2>
+            <h1>Noah Stapp.</h1>
+            <!-- <a href="#portfolio"><span class="down-arrow fa fa-angle-double-down"></span></a> -->
           </div>
         </div>
       </div>
