--- a/index.html
+++ b/index.html
@@ -12,27 +12,20 @@
   <title>Noah Stapp</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="font-awesome-4.4.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway|Poiret+One|Lato|Open+Sans|Work+Sans|Rubik|Roboto"
-    rel="stylesheet" type="text/css">
-  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
-<body class="homepage" data-spy="scroll" data-target=".navbar">
-  <main role="main>" <!-- HEADER SECTION -->
-    <div id="home">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-12 text-center">
-            <h2>Hey there.</h2>
-            <h2>I'm </h2>
-            <h1>Noah Stapp.</h1>
-            <!-- <a href="#portfolio"><span class="down-arrow fa fa-angle-double-down"></span></a> -->
-          </div>
+<body>
+  <main role="main>" <div id="home">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12 text-center">
+          <h1>Hey there. I'm</h1>
+          <h1 id="name">Noah Stapp.</h1>
+          <p class="desc t">I'm a software engineer currently working on data infrastructure at Apple. I've previously interned at Project Jupyter and Apple, as well as ran my own freelance consulting business for several years. I'll be finishing up my undergraduate degree in Computer Science from Cal Poly in Spring 2021.</p>
         </div>
       </div>
+    </div>
     </div>
   </main>
 </body>
