--- a/index.html
+++ b/index.html
@@ -16,20 +16,16 @@
 </head>
 
 <body>
-  <main role="main>" <div id="home">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-12 text-center">
-          <h1>Hey there. I'm</h1>
-          <h1 id="name">Noah Stapp.</h1>
-          <p class="desc t">I'm a software engineer currently working on data infrastructure at Apple. I've previously interned at Project Jupyter and Apple, as well as ran my own freelance consulting business for several years. I'll be finishing up my undergraduate degree in Computer Science from Cal Poly in Spring 2021.</p>
-        </div>
-      </div>
-    </div>
-    </div>
-  </main>
+  <div class="main">
+    <h1 id="intro">Hey there. I'm</h1>
+    <h1 id="name">Noah Stapp.</h1>
+    <p class="desc t">I'm a software engineer currently working on data infrastructure at Apple. I've previously
+      interned at Project Jupyter and Apple, as well as ran my own freelance consulting business for several years.
+      I'll be finishing up my undergraduate degree in Computer Science from Cal Poly in Spring 2021.</p>
+    <div class="links t">
+      <p>You can reach me by email, or check out my linkedin and Github.</p>
+  </div>
 </body>
-
 </html>
 <!-- 
     <main role="main">
