--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
 <body>
   <div class="main">
     <h1 id="intro">Hey there. I'm</h1>
-    <h1 id="name">Noah Stapp.</h1>
-    <p class="desc t">I'm a software engineer currently working on data infrastructure at Apple. I've previously
+    <div id="name">
+      <h1 id="name1">Noah</h1>
+      <h1 id="name2">Stapp,</h1>
+    </div>
+    <p class="desc t">a software engineer currently working on data infrastructure at Apple. I've previously
       interned at Project Jupyter and Apple, as well as ran my own freelance consulting business for several years.
       I'll be finishing up my undergraduate degree in Computer Science from Cal Poly in Spring 2021.</p>
     <div class="links t">
       <p>You can reach me by email, or check out my linkedin and Github.</p>
-  </div>
+    </div>
 </body>
+
 </html>
 <!-- 
     <main role="main">
