Added links and color

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
       <h1 id="name1">Noah</h1>
       <h1 id="name2">Stapp,</h1>
     </div>
-    <p class="desc t">a software engineer currently working on data infrastructure at Apple. I've previously
-      interned at Project Jupyter and Apple, as well as ran my own freelance consulting business for several years.
-      I'll be finishing up my undergraduate degree in Computer Science from Cal Poly in Spring 2021.</p>
+    <p class="desc t">a software engineer currently working on data infrastructure and platform at Apple. I've
+      previously interned at Project Jupyter and Apple, as well as ran my own freelance consulting business for several
+      years. I'll be finishing up my undergraduate degree in Computer Science from Cal Poly in Spring 2021.</p>
     <div class="links t">
-      <p>You can reach me by email, or check out my linkedin and Github.</p>
+      <p>You can reach me by <a href="mailto:noah@noahstapp.com">email</a>, or check out my <a
+          href="https://www.linkedin.com/in/noahstapp/">Linkedin</a> and <a
+          href="https://github.com/NoahStapp">Github</a>.</p>
     </div>
 </body>
 
