--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <h1 id="name">Noah Stapp,</h1>
     <p class="desc">a software engineer currently working on data infrastructure + platform at <span
         id="company">Apple</span>. I've
-      previously interned at <span id="company">Project Jupyter</span> and <span id="company">Apple</span>, as well as
-      ran my own freelance consulting business for several
-      years. I'll be finishing up my undergraduate degree in Computer Science from Cal Poly in Spring 2021.</p>
+      previously worked at <span id="company">Project Jupyter</span>, as well as ran my own freelance consulting business for several
+      years. I have a BS in Computer Science from Cal Poly, with a minor in Mathematics.</p>
     <div class="links">
       <p>You can reach me by <a href="mailto:noah@noahstapp.com">email</a>, or check out my <a
           href="https://www.linkedin.com/in/noahstapp/">Linkedin</a> and <a
