--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <h1 id="intro-2">I'm</h1>
     </div>
     <h1 id="name">Noah Stapp,</h1>
-    <p class="desc">a software engineer currently working on data infrastructure + platform at <span
+    <p class="desc">a software engineer currently working on the Data Analytics Platform team at <span
         id="company">Apple</span>. I've
-      previously worked at <span id="company">Project Jupyter</span>, as well as ran my own freelance consulting business for several
+      previously worked at <span id="company">Project Jupyter</span>, as well as ran my own software consulting business for several
       years. I have a BS in Computer Science from Cal Poly, with a minor in Mathematics.</p>
     <div class="links">
       <p>You can reach me by <a href="mailto:noah@noahstapp.com">email</a>, or check out my <a
